# tauri-plugin-foundation-models

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  package-lock.json  package.json  rollup.config.js  tsconfig.json
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md
examples/: smoke.rs
examples/chat-app/: index.html  package-lock.json  package.json  vite.config.js
examples/chat-app/src/: main.js
examples/chat-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
examples/chat-app/src-tauri/.cargo/: config.toml
examples/chat-app/src-tauri/capabilities/: default.json
examples/chat-app/src-tauri/src/: lib.rs  main.rs
examples/image-generator/: index.html  package-lock.json  package.json  vite.config.js
examples/image-generator/src/: main.js
examples/image-generator/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
examples/image-generator/src-tauri/capabilities/: default.json
examples/image-generator/src-tauri/src/: main.rs
guest-js/: index.ts
permissions/: availability.toml  default.toml  generate.toml  image.toml  session.toml  tool-call.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: availability.toml  close_session.toml  generate_image.toml  img_availability.toml  resolve_tool_call.toml  respond.toml  respond_stream.toml
permissions/schemas/: schema.json
src/: commands.rs  error.rs  ffi.rs  lib.rs  session.rs
swift/: Package.swift
swift/Sources/AppleIntelligenceFFI/: Bridge.swift  ImageBridge.swift  SessionStore.swift  ToolDispatcher.swift  Types.swift
