[package]
name = "tauri-plugin-apple-intelligence"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin exposing Apple Intelligence on-device Foundation Models on macOS 26+"
license = "MIT OR Apache-2.0"
links = "AppleIntelligenceFFI"
rust-version = "1.77"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
once_cell = "1"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
# Swift build is driven by build.rs
