[package]
name = "tauri-plugin-foundation-models"
version = "0.1.0"
edition = "2021"
description = "Tauri v2 plugin for Apple's on-device Foundation Models framework (Apple Intelligence) on macOS 26+"
license = "MIT OR Apache-2.0"
links = "foundation-models"
rust-version = "1.77"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
once_cell = "1"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
# Swift build is driven by build.rs
