[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "chat_app_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "chat-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-foundation-models = { path = "../../../" }
