[package]
name = "image-generator"
version = "0.1.0"
edition = "2021"

[lib]
name = "image_generator_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "image-generator"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-apple-intelligence = { path = "../../../" }
